# USDC-Paystream

./: .env  .gitignore  Anchor.toml  README.md  netlify.toml
_archive/: README.md
_archive/contracts/: PayStream.sol
_archive/test/: PayStream.js
app/: package-lock.json  package.json
app/.next/: build-manifest.json  fallback-build-manifest.json  next-server.js.nft.json
app/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
app/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
app/.next/server/app/: page.js  page.js.nft.json  page_client-reference-manifest.js
app/.next/server/app/_global-error/: page.js  page.js.nft.json  (+1 more)
app/.next/server/chunks/: 5c87d_USDC-Paystream_app__next-internal_server_app_favicon_ico_route_actions_f5c3fec3.js  [root-of-the-server]__dfb9f1d0._.js  [root-of-the-server]__dfb9f1d0._.js.map
app/.next/static/chunks/: 0f306b4839a992ca.js  13a91328c3157e7e.css  1e8ed94e4b5b5ca9.js  3d5f2ca2ab4b7bfe.js  4bed77d1f1deabba.js  6ca949af83614f2e.js  7409813c6f999cc3.js  787dedea48047530.js  852e58d5037744c6.js  989f9b4fe5a2de42.js  a6dad97d9634a72d.js.map  ad3c2e63905ca95f.js  e235aa72530ef784.js  turbopack-f935f459c13bc68a.js
app/src/app/: actions.ts  layout.tsx  page.tsx
app/src/components/: WalletContextProvider.tsx
app/src/types/: paystream.ts  paystream_idl.json
app/src/utils/: demo_host.ts  magic.ts  paystream.ts
programs/paystream/: Cargo.toml
programs/paystream/src/: lib.rs
tests/: paystream.js  paystream.ts
(+67 files in other folders)
